--- a/package.json
+++ b/package.json
@@ -214,8 +214,8 @@
     ],
     "publish": {
       "provider": "github",
-      "owner": "electron-react-boilerplate",
-      "repo": "electron-react-boilerplate"
+      "owner": "zzxt0019",
+      "repo": "zzxt0019"
     }
   },
   "collective": {
