--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [windows-last]
+        os: [macos-latest]
 
     steps:
       - name: Checkout git repo
