--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "electron-react-boilerplate",
-  "version": "4.6.0",
-  "description": "A foundation for scalable desktop apps",
+  "name": "counter",
+  "version": "1.0.0",
+  "description": "a simple counter",
   "license": "MIT",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://github.com/electron-react-boilerplate"
+    "name": "zzxt0019",
+    "email": "zzxt0019@outlook.com",
+    "url": "https://github.com/zzxt0019"
   },
   "main": "./dist/main/main.js",
   "scripts": {
